Generics Exercises added.